# Power-System-ML

./: .gitignore  README.md  SWEETVIZ_REPORT.html  adaboost_model.pkl  app.py  ml_model_building.ipynb  ml_model_building2.ipynb  pyproject.toml  requirements.txt  service.py  val.csv  w.pkl
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/: test.csv  train.csv
reports - eda/: report.html
