[project]
name = "power-system-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.8",
    "fastapi>=0.118.0",
    "ipykernel>=6.30.1",
    "numpy>=2.1.3",
    "pandas>=2.3.3",
    "plotly-express>=0.4.1",
    "pydantic>=2.11.9",
    "scikit-learn>=1.7.2",
    "streamlit>=1.50.0",
    "sweetviz>=2.3.1",
    "xgboost>=3.0.5",
    "ydata-profiling>=4.17.0",
]
